# arc-tree-thingy

./: Cargo.toml  README.md
src/: main.rs  tree_utils.rs
src/file_info/: csb.rs  mod.rs  nus3audio.rs  nutexb.rs  prc.rs  sli.rs  sqb.rs  ssbh.rs
