[package]
name = "arc-browser"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[dependencies]
fltk = "0.15.9"
#smash-arc = { version = "0.2.1", features = ["libzstd"] }
smash-arc = { path = "../ult/smash-arc", features = ["libzstd"] }
#nutexb = { git = "https://github.com/jam1garner/nutexb" }
nutexb = { path = "../ult/nutexb" }
ssbh_lib = { git = "https://github.com/ultimate-research/ssbh_lib" }
binread = "2.1.1"

[profile.release]
lto = true
